modificacoes gerais no front